results/SVCOMP/specgen/log-CharSequenceToString-2024_02_25_03_52_57.txt
public class CharSequenceToString {

  //@ requires arg != null;
  //@ ensures \result <==> i == -1 || i == 5;
  public static boolean main(String arg) {
    CharSequence cs = (CharSequence) arg;
    String s = cs.toString();
    int i = -1;
    //@ maintaining i == -1 || i == cs.length();
    if (s.equals("case1")) i = cs.length();
    return i == -1 || i == 5;
  }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:9: error: Loop specifications must immediately precede a loop statement
    //@ maintaining i == -1 || i == cs.length();
        ^
1 error

public class CharSequenceToString {

  //@ requires arg != null;
  //@ ensures \result <==> i == -1 || i == 5;
  public static boolean main(String arg) {
    CharSequence cs = (CharSequence) arg;
    String s = cs.toString();
    int i = -1;
    if (s.equals("case1")) {
        i = cs.length();
    }
    return i == -1 || i == 5;
  }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> i == -1 || i == 5;
                           ^
  symbol:   variable i
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> i == -1 || i == 5;
                                      ^
  symbol:   variable i
  location: class CharSequenceToString
2 errors

public class CharSequenceToString {

  //@ requires arg != null;
  //@ ensures \result <==> i == -1 || i == 5;
  public static boolean main(String arg) {
    CharSequence cs = (CharSequence) arg;
    String s = cs.toString();
    int i = -1;
    if (s.equals("case1")) {
        i = cs.length();
    }
    return i == -1 || i == 5;
  }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> i == -1 || i == 5;
                           ^
  symbol:   variable i
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> i == -1 || i == 5;
                                      ^
  symbol:   variable i
  location: class CharSequenceToString
2 errors

public class CharSequenceToString {

  //@ requires arg != null;
  //@ ensures \result <==> cs.length() == -1 || cs.length() == 5;
  public static boolean main(String arg) {
    CharSequence cs = (CharSequence) arg;
    String s = cs.toString();
    if (s.equals("case1")) {
        return cs.length() == -1 || cs.length() == 5;
    }
    return false;
  }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> cs.length() == -1 || cs.length() == 5;
                           ^
  symbol:   variable cs
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: cannot find symbol
  //@ ensures \result <==> cs.length() == -1 || cs.length() == 5;
                                                ^
  symbol:   variable cs
  location: class CharSequenceToString
2 errors

public class CharSequenceToString {

  //@ requires arg != null;
  //@ ensures \result <==> arg.length() == -1 || arg.length() == 5;
  public static boolean main(String arg) {
    CharSequence cs = (CharSequence) arg;
    String s = cs.toString();
    if (s.equals("case1")) {
        return arg.length() == -1 || arg.length() == 5;
    }
    return false;
  }
  
}
